# eZaR

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  TODO.md  docker-compose.yml  mongo_init.js  pyproject.toml  setup.cfg
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yaml  lint.yml
ezar/: __init__.py  __main__.py
ezar/backend/: __init__.py
ezar/backend/config/: __init__.py  constants.py
ezar/cogs/: economy.py  guild_logs.py  listeners.py  meta.py  misc.py
ezar/cogs/logs/: __init__.py  channels.py  emotes.py  invites.py  members.py  messages.py  roles.py  threads.py
ezar/helpers/: components.py
ezar/utils/: __init__.py  embed.py  ezar.py
