[tool.poetry]
name = "ezar"
version = "3.1.0"
description = "A very helpful Moderation and Server Help bot, that has Economy for no damn reason."
authors = ["Noelle <noelle_km@proton.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.20.0"
motor = "^3.0.0"
dnspython = "^2.2.1"
disnake = {git = "https://github.com/DisnakeDev/disnake"}

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
