[tool.poetry]
name = "ezar"
version = "3.0.0"
description = "A very helpful Moderation and Server Help bot, that has Economy for no damn reason."
authors = ["Sham <thesham@proton.me>"]
license = "BSD 3.0"

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.21.0"
motor = "^3.0.0"
dnspython = "^2.2.1"
disnake = {git = "https://github.com/DisnakeDev/disnake"}
disnake-jishaku = "^2.6.5"
disnake-ext-components = {git = "https://github.com/DisnakeCommunity/disnake-ext-components"}
taskipy = "^1.10.3"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"
isort = "^5.11.4"

[tool.isort]
profile = "black"

[tool.taskipy.tasks]
start = "poetry run python -m ezar"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
